// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean list attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/boolean_list.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { listMapper } from \\"cdktf\\";

// Configuration

export interface BooleanListConfig extends TerraformMetaArguments {
  readonly fooRequired: boolean[];
  readonly fooOptional?: boolean[];
}

// Resource

export class BooleanList extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: BooleanListConfig) {
    super(scope, id, {
      terraformResourceType: 'aws_boolean_list',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._fooRequired = config.fooRequired;
    this._fooOptional = config.fooOptional;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // foo_required - computed: false, optional: false, required: true
  private _fooRequired: boolean[];
  public get fooRequired() {
    return this.interpolationForAttribute('foo_required') as any;
  }
  public set fooRequired(value: boolean[]) {
    this._fooRequired = value;
  }
  // Temporarily expose input value. Use with caution.
  public get fooRequiredInput() {
    return this._fooRequired
  }

  // foo_optional - computed: false, optional: true, required: false
  private _fooOptional?: boolean[];
  public get fooOptional() {
    return this.interpolationForAttribute('foo_optional') as any;
  }
  public set fooOptional(value: boolean[] ) {
    this._fooOptional = value;
  }
  public resetFooOptional() {
    this._fooOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooOptionalInput() {
    return this._fooOptional
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      foo_required: listMapper(booleanToTerraform)(this._fooRequired),
      foo_optional: listMapper(booleanToTerraform)(this._fooOptional),
    };
  }
}
"
`;

exports[`boolean map attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/boolean_map.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { BooleanMap } from \\"cdktf\\";
import { hashMapper } from \\"cdktf\\";
import { anyToTerraform } from \\"cdktf\\";

// Configuration

export interface BooleanMapConfig extends TerraformMetaArguments {
  readonly fooComputedOptional?: { [key: string]: boolean };
  readonly fooOptional?: { [key: string]: boolean };
}

// Resource

export class BooleanMap extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: BooleanMapConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_boolean_map',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._fooComputedOptional = config.fooComputedOptional;
    this._fooOptional = config.fooOptional;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // foo_computed - computed: true, optional: false, required: false
  public fooComputed(key: string): boolean {
    return new BooleanMap(this, 'foo_computed').lookup(key);
  }

  // foo_computed_optional - computed: true, optional: true, required: false
  private _fooComputedOptional?: { [key: string]: boolean }
  public get fooComputedOptional(): { [key: string]: boolean } {
    return this.interpolationForAttribute('foo_computed_optional') as any; // Getting the computed value is not yet implemented
  }
  public set fooComputedOptional(value: { [key: string]: boolean }) {
    this._fooComputedOptional = value;
  }
  public resetFooComputedOptional() {
    this._fooComputedOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooComputedOptionalInput() {
    return this._fooComputedOptional
  }

  // foo_optional - computed: false, optional: true, required: false
  private _fooOptional?: { [key: string]: boolean };
  public get fooOptional() {
    return this.interpolationForAttribute('foo_optional') as any;
  }
  public set fooOptional(value: { [key: string]: boolean } ) {
    this._fooOptional = value;
  }
  public resetFooOptional() {
    this._fooOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooOptionalInput() {
    return this._fooOptional
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      foo_computed_optional: hashMapper(anyToTerraform)(this._fooComputedOptional),
      foo_optional: hashMapper(anyToTerraform)(this._fooOptional),
    };
  }
}
"
`;

exports[`computed complex attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/computed_complex.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { ComplexComputedList } from \\"cdktf\\";

// Configuration

export interface ComputedComplexConfig extends TerraformMetaArguments {
}
export class ComputedComplexEgress extends ComplexComputedList {

  // cidr_blocks - computed: true, optional: false, required: false
  public get cidrBlocks() {
    return this.getListAttribute('cidr_blocks');
  }

  // description - computed: true, optional: false, required: false
  public get description() {
    return this.getStringAttribute('description');
  }

  // from_port - computed: true, optional: false, required: false
  public get fromPort() {
    return this.getNumberAttribute('from_port');
  }

  // ipv6_cidr_blocks - computed: true, optional: false, required: false
  public get ipv6CidrBlocks() {
    return this.getListAttribute('ipv6_cidr_blocks');
  }

  // prefix_list_ids - computed: true, optional: false, required: false
  public get prefixListIds() {
    return this.getListAttribute('prefix_list_ids');
  }

  // protocol - computed: true, optional: false, required: false
  public get protocol() {
    return this.getStringAttribute('protocol');
  }

  // security_groups - computed: true, optional: false, required: false
  public get securityGroups() {
    return this.getListAttribute('security_groups');
  }

  // self - computed: true, optional: false, required: false
  public get selfAttribute() {
    return this.getBooleanAttribute('self');
  }

  // to_port - computed: true, optional: false, required: false
  public get toPort() {
    return this.getNumberAttribute('to_port');
  }
}

// Resource

export class ComputedComplex extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: ComputedComplexConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_computed_complex',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // egress - computed: true, optional: false, required: false
  public egress(index: string) {
    return new ComputedComplexEgress(this, 'egress', index);
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
    };
  }
}
"
`;

exports[`computed complex nested attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/computed_complex_nested.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { ComplexComputedList } from \\"cdktf\\";

// Configuration

export interface ComputedComplexNestedConfig extends TerraformMetaArguments {
}
export class ComputedComplexNestedResourcesAutoscalingGroups extends ComplexComputedList {

  // name - computed: true, optional: false, required: false
  public get name() {
    return this.getStringAttribute('name');
  }
}
export class ComputedComplexNestedResources extends ComplexComputedList {

  // autoscaling_groups - computed: true, optional: false, required: false
  public get autoscalingGroups() {
    return this.interpolationForAttribute('autoscaling_groups') as any;
  }

  // remote_access_security_group_id - computed: true, optional: false, required: false
  public get remoteAccessSecurityGroupId() {
    return this.getStringAttribute('remote_access_security_group_id');
  }
}

// Resource

export class ComputedComplexNested extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: ComputedComplexNestedConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_computed_complex_nested',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // resources - computed: true, optional: false, required: false
  public resources(index: string) {
    return new ComputedComplexNestedResources(this, 'resources', index);
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
    };
  }
}
"
`;

exports[`computed nested complex list block type 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/block_type_nested_computed_list.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { canInspect } from 'cdktf';
import { listMapper } from \\"cdktf\\";
import { stringToTerraform } from \\"cdktf\\";

// Configuration

export interface BlockTypeNestedComputedListConfig extends TerraformMetaArguments {
  /** inputs block */
  readonly inputs?: BlockTypeNestedComputedListInputs[];
}
export interface BlockTypeNestedComputedListInputs {
  readonly namePrefix: string;
}

function blockTypeNestedComputedListInputsToTerraform(struct?: BlockTypeNestedComputedListInputs): any {
  if (!canInspect(struct)) { return struct; }
  return {
    name_prefix: stringToTerraform(struct!.namePrefix),
  }
}


// Resource

export class BlockTypeNestedComputedList extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: BlockTypeNestedComputedListConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_block_type_nested_computed_list',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._inputs = config.inputs;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // inputs - computed: false, optional: true, required: false
  private _inputs?: BlockTypeNestedComputedListInputs[];
  public get inputs() {
    return this.interpolationForAttribute('inputs') as any;
  }
  public set inputs(value: BlockTypeNestedComputedListInputs[] ) {
    this._inputs = value;
  }
  public resetInputs() {
    this._inputs = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get inputsInput() {
    return this._inputs
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      inputs: listMapper(blockTypeNestedComputedListInputsToTerraform)(this._inputs),
    };
  }
}
"
`;

exports[`computed optional complex attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/computed_optional_complex.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { canInspect } from 'cdktf';
import { listMapper } from \\"cdktf\\";
import { stringToTerraform } from \\"cdktf\\";
import { numberToTerraform } from \\"cdktf\\";
import { booleanToTerraform } from \\"cdktf\\";

// Configuration

export interface ComputedOptionalComplexConfig extends TerraformMetaArguments {
  readonly egress?: ComputedOptionalComplexEgress[];
}
export interface ComputedOptionalComplexEgress {
  readonly cidrBlocks?: string[];
  readonly description?: string;
  readonly fromPort?: number;
  readonly ipv6CidrBlocks?: string[];
  readonly prefixListIds?: string[];
  readonly protocol?: string;
  readonly securityGroups?: string[];
  readonly selfAttribute?: boolean;
  readonly toPort?: number;
}

function computedOptionalComplexEgressToTerraform(struct?: ComputedOptionalComplexEgress): any {
  if (!canInspect(struct)) { return struct; }
  return {
    cidr_blocks: listMapper(stringToTerraform)(struct!.cidrBlocks),
    description: stringToTerraform(struct!.description),
    from_port: numberToTerraform(struct!.fromPort),
    ipv6_cidr_blocks: listMapper(stringToTerraform)(struct!.ipv6CidrBlocks),
    prefix_list_ids: listMapper(stringToTerraform)(struct!.prefixListIds),
    protocol: stringToTerraform(struct!.protocol),
    security_groups: listMapper(stringToTerraform)(struct!.securityGroups),
    self: booleanToTerraform(struct!.selfAttribute),
    to_port: numberToTerraform(struct!.toPort),
  }
}


// Resource

export class ComputedOptionalComplex extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: ComputedOptionalComplexConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_computed_optional_complex',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._egress = config.egress;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // egress - computed: true, optional: true, required: false
  private _egress?: ComputedOptionalComplexEgress[]
  public get egress(): ComputedOptionalComplexEgress[] {
    return this.interpolationForAttribute('egress') as any; // Getting the computed value is not yet implemented
  }
  public set egress(value: ComputedOptionalComplexEgress[]) {
    this._egress = value;
  }
  public resetEgress() {
    this._egress = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get egressInput() {
    return this._egress
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      egress: listMapper(computedOptionalComplexEgressToTerraform)(this._egress),
    };
  }
}
"
`;

exports[`deeply nested block types 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/deeply_nested_block_types.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { canInspect } from 'cdktf';
import { listMapper } from \\"cdktf\\";
import { stringToTerraform } from \\"cdktf\\";
import { numberToTerraform } from \\"cdktf\\";

// Configuration

export interface DeeplyNestedBlockTypesConfig extends TerraformMetaArguments {
  /** lifecycle_rule block */
  readonly lifecycleRule?: DeeplyNestedBlockTypesLifecycleRule[];
}
export interface DeeplyNestedBlockTypesLifecycleRuleExpiration {
  readonly date?: string;
}

function deeplyNestedBlockTypesLifecycleRuleExpirationToTerraform(struct?: DeeplyNestedBlockTypesLifecycleRuleExpiration): any {
  if (!canInspect(struct)) { return struct; }
  return {
    date: stringToTerraform(struct!.date),
  }
}

export interface DeeplyNestedBlockTypesLifecycleRule {
  readonly abortIncompleteMultipartUploadDays?: number;
  /** expiration block */
  readonly expiration?: DeeplyNestedBlockTypesLifecycleRuleExpiration[];
}

function deeplyNestedBlockTypesLifecycleRuleToTerraform(struct?: DeeplyNestedBlockTypesLifecycleRule): any {
  if (!canInspect(struct)) { return struct; }
  return {
    abort_incomplete_multipart_upload_days: numberToTerraform(struct!.abortIncompleteMultipartUploadDays),
    expiration: listMapper(deeplyNestedBlockTypesLifecycleRuleExpirationToTerraform)(struct!.expiration),
  }
}


// Resource

export class DeeplyNestedBlockTypes extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: DeeplyNestedBlockTypesConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_deeply_nested_block_types',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._lifecycleRule = config.lifecycleRule;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // lifecycle_rule - computed: false, optional: true, required: false
  private _lifecycleRule?: DeeplyNestedBlockTypesLifecycleRule[];
  public get lifecycleRule() {
    return this.interpolationForAttribute('lifecycle_rule') as any;
  }
  public set lifecycleRule(value: DeeplyNestedBlockTypesLifecycleRule[] ) {
    this._lifecycleRule = value;
  }
  public resetLifecycleRule() {
    this._lifecycleRule = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get lifecycleRuleInput() {
    return this._lifecycleRule
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      lifecycle_rule: listMapper(deeplyNestedBlockTypesLifecycleRuleToTerraform)(this._lifecycleRule),
    };
  }
}
"
`;

exports[`ignored attributes 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/ignored_attributes.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';

// Configuration

export interface IgnoredAttributesConfig extends TerraformMetaArguments {
}

// Resource

export class IgnoredAttributes extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: IgnoredAttributesConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_ignored_attributes',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // id - computed: true, optional: true, required: false
  public get id() {
    return this.getStringAttribute('id');
  }

  // arn - computed: true, optional: false, required: false
  public get arn() {
    return this.getStringAttribute('arn');
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
    };
  }
}
"
`;

exports[`incompatible attribute names 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/incompatible_attribute_names.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { stringToTerraform } from \\"cdktf\\";

// Configuration

export interface IncompatibleAttributeNamesConfig extends TerraformMetaArguments {
  readonly fetchPasswordData?: string;
  readonly selfAttribute: string;
}

// Resource

export class IncompatibleAttributeNames extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: IncompatibleAttributeNamesConfig) {
    super(scope, id, {
      terraformResourceType: 'aws_incompatible_attribute_names',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._getPasswordData = config.fetchPasswordData;
    this._self = config.selfAttribute;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // get_password_data - computed: false, optional: true, required: false
  private _getPasswordData?: string;
  public get fetchPasswordData() {
    return this.getStringAttribute('get_password_data');
  }
  public set fetchPasswordData(value: string ) {
    this._getPasswordData = value;
  }
  public resetFetchPasswordData() {
    this._getPasswordData = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fetchPasswordDataInput() {
    return this._getPasswordData
  }

  // self - computed: false, optional: false, required: true
  private _self: string;
  public get selfAttribute() {
    return this.getStringAttribute('self');
  }
  public set selfAttribute(value: string) {
    this._self = value;
  }
  // Temporarily expose input value. Use with caution.
  public get selfAttributeInput() {
    return this._self
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      get_password_data: stringToTerraform(this._getPasswordData),
      self: stringToTerraform(this._self),
    };
  }
}
"
`;

exports[`list of string map attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/list_of_string_map.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { StringMap } from \\"cdktf\\";

// Configuration

export interface ListOfStringMapConfig extends TerraformMetaArguments {
}

// Resource

export class ListOfStringMap extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: ListOfStringMapConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_list_of_string_map',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // keys - computed: true, optional: false, required: false
  public keys(index: string, key: string): string {
    return new StringMap(this, \`keys.\${index}\`).lookup(key);
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
    };
  }
}
"
`;

exports[`number list attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/number_list.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { listMapper } from \\"cdktf\\";

// Configuration

export interface NumberListConfig extends TerraformMetaArguments {
  readonly fooRequired: number[];
  readonly fooOptional?: number[];
}

// Resource

export class NumberList extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: NumberListConfig) {
    super(scope, id, {
      terraformResourceType: 'aws_number_list',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._fooRequired = config.fooRequired;
    this._fooOptional = config.fooOptional;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // foo_required - computed: false, optional: false, required: true
  private _fooRequired: number[];
  public get fooRequired() {
    return this.interpolationForAttribute('foo_required') as any;
  }
  public set fooRequired(value: number[]) {
    this._fooRequired = value;
  }
  // Temporarily expose input value. Use with caution.
  public get fooRequiredInput() {
    return this._fooRequired
  }

  // foo_optional - computed: false, optional: true, required: false
  private _fooOptional?: number[];
  public get fooOptional() {
    return this.interpolationForAttribute('foo_optional') as any;
  }
  public set fooOptional(value: number[] ) {
    this._fooOptional = value;
  }
  public resetFooOptional() {
    this._fooOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooOptionalInput() {
    return this._fooOptional
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      foo_required: listMapper(numberToTerraform)(this._fooRequired),
      foo_optional: listMapper(numberToTerraform)(this._fooOptional),
    };
  }
}
"
`;

exports[`number map attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/number_map.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { NumberMap } from \\"cdktf\\";
import { hashMapper } from \\"cdktf\\";
import { anyToTerraform } from \\"cdktf\\";

// Configuration

export interface NumberMapConfig extends TerraformMetaArguments {
  readonly fooComputedOptional?: { [key: string]: number };
  readonly fooOptional?: { [key: string]: number };
}

// Resource

export class NumberMap extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: NumberMapConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_number_map',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._fooComputedOptional = config.fooComputedOptional;
    this._fooOptional = config.fooOptional;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // foo_computed - computed: true, optional: false, required: false
  public fooComputed(key: string): number {
    return new NumberMap(this, 'foo_computed').lookup(key);
  }

  // foo_computed_optional - computed: true, optional: true, required: false
  private _fooComputedOptional?: { [key: string]: number }
  public get fooComputedOptional(): { [key: string]: number } {
    return this.interpolationForAttribute('foo_computed_optional') as any; // Getting the computed value is not yet implemented
  }
  public set fooComputedOptional(value: { [key: string]: number }) {
    this._fooComputedOptional = value;
  }
  public resetFooComputedOptional() {
    this._fooComputedOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooComputedOptionalInput() {
    return this._fooComputedOptional
  }

  // foo_optional - computed: false, optional: true, required: false
  private _fooOptional?: { [key: string]: number };
  public get fooOptional() {
    return this.interpolationForAttribute('foo_optional') as any;
  }
  public set fooOptional(value: { [key: string]: number } ) {
    this._fooOptional = value;
  }
  public resetFooOptional() {
    this._fooOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooOptionalInput() {
    return this._fooOptional
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      foo_computed_optional: hashMapper(anyToTerraform)(this._fooComputedOptional),
      foo_optional: hashMapper(anyToTerraform)(this._fooOptional),
    };
  }
}
"
`;

exports[`primitive boolean 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/primitive_boolean.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { booleanToTerraform } from \\"cdktf\\";

// Configuration

export interface PrimitiveBooleanConfig extends TerraformMetaArguments {
  readonly fooComputedOptional?: boolean;
  readonly fooOptional?: boolean;
  readonly fooRequired: boolean;
}

// Resource

export class PrimitiveBoolean extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: PrimitiveBooleanConfig) {
    super(scope, id, {
      terraformResourceType: 'aws_primitive_boolean',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._fooComputedOptional = config.fooComputedOptional;
    this._fooOptional = config.fooOptional;
    this._fooRequired = config.fooRequired;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // foo_computed - computed: true, optional: false, required: false
  public get fooComputed() {
    return this.getBooleanAttribute('foo_computed');
  }

  // foo_computed_optional - computed: true, optional: true, required: false
  private _fooComputedOptional?: boolean;
  public get fooComputedOptional() {
    return this.getBooleanAttribute('foo_computed_optional');
  }
  public set fooComputedOptional(value: boolean) {
    this._fooComputedOptional = value;
  }
  public resetFooComputedOptional() {
    this._fooComputedOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooComputedOptionalInput() {
    return this._fooComputedOptional
  }

  // foo_optional - computed: false, optional: true, required: false
  private _fooOptional?: boolean;
  public get fooOptional() {
    return this.getBooleanAttribute('foo_optional');
  }
  public set fooOptional(value: boolean ) {
    this._fooOptional = value;
  }
  public resetFooOptional() {
    this._fooOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooOptionalInput() {
    return this._fooOptional
  }

  // foo_required - computed: false, optional: false, required: true
  private _fooRequired: boolean;
  public get fooRequired() {
    return this.getBooleanAttribute('foo_required');
  }
  public set fooRequired(value: boolean) {
    this._fooRequired = value;
  }
  // Temporarily expose input value. Use with caution.
  public get fooRequiredInput() {
    return this._fooRequired
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      foo_computed_optional: booleanToTerraform(this._fooComputedOptional),
      foo_optional: booleanToTerraform(this._fooOptional),
      foo_required: booleanToTerraform(this._fooRequired),
    };
  }
}
"
`;

exports[`primitive number 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/primitive_number.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { numberToTerraform } from \\"cdktf\\";

// Configuration

export interface PrimitiveNumberConfig extends TerraformMetaArguments {
  readonly fooComputedOptional?: number;
  readonly fooOptional?: number;
  readonly fooRequired: number;
}

// Resource

export class PrimitiveNumber extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: PrimitiveNumberConfig) {
    super(scope, id, {
      terraformResourceType: 'aws_primitive_number',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._fooComputedOptional = config.fooComputedOptional;
    this._fooOptional = config.fooOptional;
    this._fooRequired = config.fooRequired;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // foo_computed - computed: true, optional: false, required: false
  public get fooComputed() {
    return this.getNumberAttribute('foo_computed');
  }

  // foo_computed_optional - computed: true, optional: true, required: false
  private _fooComputedOptional?: number;
  public get fooComputedOptional() {
    return this.getNumberAttribute('foo_computed_optional');
  }
  public set fooComputedOptional(value: number) {
    this._fooComputedOptional = value;
  }
  public resetFooComputedOptional() {
    this._fooComputedOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooComputedOptionalInput() {
    return this._fooComputedOptional
  }

  // foo_optional - computed: false, optional: true, required: false
  private _fooOptional?: number;
  public get fooOptional() {
    return this.getNumberAttribute('foo_optional');
  }
  public set fooOptional(value: number ) {
    this._fooOptional = value;
  }
  public resetFooOptional() {
    this._fooOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooOptionalInput() {
    return this._fooOptional
  }

  // foo_required - computed: false, optional: false, required: true
  private _fooRequired: number;
  public get fooRequired() {
    return this.getNumberAttribute('foo_required');
  }
  public set fooRequired(value: number) {
    this._fooRequired = value;
  }
  // Temporarily expose input value. Use with caution.
  public get fooRequiredInput() {
    return this._fooRequired
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      foo_computed_optional: numberToTerraform(this._fooComputedOptional),
      foo_optional: numberToTerraform(this._fooOptional),
      foo_required: numberToTerraform(this._fooRequired),
    };
  }
}
"
`;

exports[`primitive string 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/primitive_string.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { stringToTerraform } from \\"cdktf\\";

// Configuration

export interface PrimitiveStringConfig extends TerraformMetaArguments {
  readonly fooComputedOptional?: string;
  readonly fooOptional?: string;
  readonly fooRequired: string;
}

// Resource

export class PrimitiveString extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: PrimitiveStringConfig) {
    super(scope, id, {
      terraformResourceType: 'aws_primitive_string',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._fooComputedOptional = config.fooComputedOptional;
    this._fooOptional = config.fooOptional;
    this._fooRequired = config.fooRequired;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // foo_computed - computed: true, optional: false, required: false
  public get fooComputed() {
    return this.getStringAttribute('foo_computed');
  }

  // foo_computed_optional - computed: true, optional: true, required: false
  private _fooComputedOptional?: string;
  public get fooComputedOptional() {
    return this.getStringAttribute('foo_computed_optional');
  }
  public set fooComputedOptional(value: string) {
    this._fooComputedOptional = value;
  }
  public resetFooComputedOptional() {
    this._fooComputedOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooComputedOptionalInput() {
    return this._fooComputedOptional
  }

  // foo_optional - computed: false, optional: true, required: false
  private _fooOptional?: string;
  public get fooOptional() {
    return this.getStringAttribute('foo_optional');
  }
  public set fooOptional(value: string ) {
    this._fooOptional = value;
  }
  public resetFooOptional() {
    this._fooOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get fooOptionalInput() {
    return this._fooOptional
  }

  // foo_required - computed: false, optional: false, required: true
  private _fooRequired: string;
  public get fooRequired() {
    return this.getStringAttribute('foo_required');
  }
  public set fooRequired(value: string) {
    this._fooRequired = value;
  }
  // Temporarily expose input value. Use with caution.
  public get fooRequiredInput() {
    return this._fooRequired
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      foo_computed_optional: stringToTerraform(this._fooComputedOptional),
      foo_optional: stringToTerraform(this._fooOptional),
      foo_required: stringToTerraform(this._fooRequired),
    };
  }
}
"
`;

exports[`set / list block type 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/block_type_set_list.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { canInspect } from 'cdktf';
import { listMapper } from \\"cdktf\\";
import { stringToTerraform } from \\"cdktf\\";

// Configuration

export interface BlockTypeSetListConfig extends TerraformMetaArguments {
  /** timeouts_set block */
  readonly timeoutsSet?: BlockTypeSetListTimeoutsSet[];
  /** timeouts_list block */
  readonly timeoutsList?: BlockTypeSetListTimeoutsList[];
}
export interface BlockTypeSetListTimeoutsSet {
  readonly create?: string;
}

function blockTypeSetListTimeoutsSetToTerraform(struct?: BlockTypeSetListTimeoutsSet): any {
  if (!canInspect(struct)) { return struct; }
  return {
    create: stringToTerraform(struct!.create),
  }
}

export interface BlockTypeSetListTimeoutsList {
  readonly create?: string;
}

function blockTypeSetListTimeoutsListToTerraform(struct?: BlockTypeSetListTimeoutsList): any {
  if (!canInspect(struct)) { return struct; }
  return {
    create: stringToTerraform(struct!.create),
  }
}


// Resource

export class BlockTypeSetList extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: BlockTypeSetListConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_block_type_set_list',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._timeoutsSet = config.timeoutsSet;
    this._timeoutsList = config.timeoutsList;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // timeouts_set - computed: false, optional: true, required: false
  private _timeoutsSet?: BlockTypeSetListTimeoutsSet[];
  public get timeoutsSet() {
    return this.interpolationForAttribute('timeouts_set') as any;
  }
  public set timeoutsSet(value: BlockTypeSetListTimeoutsSet[] ) {
    this._timeoutsSet = value;
  }
  public resetTimeoutsSet() {
    this._timeoutsSet = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get timeoutsSetInput() {
    return this._timeoutsSet
  }

  // timeouts_list - computed: false, optional: true, required: false
  private _timeoutsList?: BlockTypeSetListTimeoutsList[];
  public get timeoutsList() {
    return this.interpolationForAttribute('timeouts_list') as any;
  }
  public set timeoutsList(value: BlockTypeSetListTimeoutsList[] ) {
    this._timeoutsList = value;
  }
  public resetTimeoutsList() {
    this._timeoutsList = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get timeoutsListInput() {
    return this._timeoutsList
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      timeouts_set: listMapper(blockTypeSetListTimeoutsSetToTerraform)(this._timeoutsSet),
      timeouts_list: listMapper(blockTypeSetListTimeoutsListToTerraform)(this._timeoutsList),
    };
  }
}
"
`;

exports[`single block type 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/single_block_type.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { canInspect } from 'cdktf';
import { stringToTerraform } from \\"cdktf\\";

// Configuration

export interface SingleBlockTypeConfig extends TerraformMetaArguments {
  /** timeouts block */
  readonly timeouts?: SingleBlockTypeTimeouts;
}
export interface SingleBlockTypeTimeouts {
  readonly create?: string;
}

function singleBlockTypeTimeoutsToTerraform(struct?: SingleBlockTypeTimeouts): any {
  if (!canInspect(struct)) { return struct; }
  return {
    create: stringToTerraform(struct!.create),
  }
}


// Resource

export class SingleBlockType extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: SingleBlockTypeConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_single_block_type',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._timeouts = config.timeouts;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // timeouts - computed: false, optional: true, required: false
  private _timeouts?: SingleBlockTypeTimeouts;
  public get timeouts() {
    return this.interpolationForAttribute('timeouts') as any;
  }
  public set timeouts(value: SingleBlockTypeTimeouts ) {
    this._timeouts = value;
  }
  public resetTimeouts() {
    this._timeouts = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get timeoutsInput() {
    return this._timeouts
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      timeouts: singleBlockTypeTimeoutsToTerraform(this._timeouts),
    };
  }
}
"
`;

exports[`string list attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/string_list.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { listMapper } from \\"cdktf\\";
import { stringToTerraform } from \\"cdktf\\";

// Configuration

export interface StringListConfig extends TerraformMetaArguments {
  readonly subjectAlternativeNamesOptionalComputed?: string[];
  readonly subjectAlternativeNamesRequired: string[];
  readonly subjectAlternativeNamesOptional?: string[];
}

// Resource

export class StringList extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: StringListConfig) {
    super(scope, id, {
      terraformResourceType: 'aws_string_list',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._subjectAlternativeNamesOptionalComputed = config.subjectAlternativeNamesOptionalComputed;
    this._subjectAlternativeNamesRequired = config.subjectAlternativeNamesRequired;
    this._subjectAlternativeNamesOptional = config.subjectAlternativeNamesOptional;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // subject_alternative_names_optional_computed - computed: true, optional: true, required: false
  private _subjectAlternativeNamesOptionalComputed?: string[];
  public get subjectAlternativeNamesOptionalComputed() {
    return this.getListAttribute('subject_alternative_names_optional_computed');
  }
  public set subjectAlternativeNamesOptionalComputed(value: string[]) {
    this._subjectAlternativeNamesOptionalComputed = value;
  }
  public resetSubjectAlternativeNamesOptionalComputed() {
    this._subjectAlternativeNamesOptionalComputed = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get subjectAlternativeNamesOptionalComputedInput() {
    return this._subjectAlternativeNamesOptionalComputed
  }

  // subject_alternative_names_computed - computed: true, optional: false, required: false
  public get subjectAlternativeNamesComputed() {
    return this.getListAttribute('subject_alternative_names_computed');
  }

  // subject_alternative_names_required - computed: false, optional: false, required: true
  private _subjectAlternativeNamesRequired: string[];
  public get subjectAlternativeNamesRequired() {
    return this.getListAttribute('subject_alternative_names_required');
  }
  public set subjectAlternativeNamesRequired(value: string[]) {
    this._subjectAlternativeNamesRequired = value;
  }
  // Temporarily expose input value. Use with caution.
  public get subjectAlternativeNamesRequiredInput() {
    return this._subjectAlternativeNamesRequired
  }

  // subject_alternative_names_optional - computed: false, optional: true, required: false
  private _subjectAlternativeNamesOptional?: string[];
  public get subjectAlternativeNamesOptional() {
    return this.getListAttribute('subject_alternative_names_optional');
  }
  public set subjectAlternativeNamesOptional(value: string[] ) {
    this._subjectAlternativeNamesOptional = value;
  }
  public resetSubjectAlternativeNamesOptional() {
    this._subjectAlternativeNamesOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get subjectAlternativeNamesOptionalInput() {
    return this._subjectAlternativeNamesOptional
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      subject_alternative_names_optional_computed: listMapper(stringToTerraform)(this._subjectAlternativeNamesOptionalComputed),
      subject_alternative_names_required: listMapper(stringToTerraform)(this._subjectAlternativeNamesRequired),
      subject_alternative_names_optional: listMapper(stringToTerraform)(this._subjectAlternativeNamesOptional),
    };
  }
}
"
`;

exports[`string map attribute 1`] = `
"// https://www.terraform.io/docs/providers/aws/r/string_map.html
// generated from terraform resource schema

import { Construct } from 'constructs';
import { TerraformResource } from 'cdktf';
import { TerraformMetaArguments } from 'cdktf';
import { StringMap } from \\"cdktf\\";
import { hashMapper } from \\"cdktf\\";
import { anyToTerraform } from \\"cdktf\\";

// Configuration

export interface StringMapConfig extends TerraformMetaArguments {
  readonly subjectAlternativeNamesComputedOptional?: { [key: string]: string };
  readonly subjectAlternativeNamesOptional?: { [key: string]: string };
}

// Resource

export class StringMap extends TerraformResource {

  // ===========
  // INITIALIZER
  // ===========

  public constructor(scope: Construct, id: string, config: StringMapConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'aws_string_map',
      terraformGeneratorMetadata: {
        providerName: 'aws'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._subjectAlternativeNamesComputedOptional = config.subjectAlternativeNamesComputedOptional;
    this._subjectAlternativeNamesOptional = config.subjectAlternativeNamesOptional;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // subject_alternative_names_computed - computed: true, optional: false, required: false
  public subjectAlternativeNamesComputed(key: string): string {
    return new StringMap(this, 'subject_alternative_names_computed').lookup(key);
  }

  // subject_alternative_names_computed_optional - computed: true, optional: true, required: false
  private _subjectAlternativeNamesComputedOptional?: { [key: string]: string }
  public get subjectAlternativeNamesComputedOptional(): { [key: string]: string } {
    return this.interpolationForAttribute('subject_alternative_names_computed_optional') as any; // Getting the computed value is not yet implemented
  }
  public set subjectAlternativeNamesComputedOptional(value: { [key: string]: string }) {
    this._subjectAlternativeNamesComputedOptional = value;
  }
  public resetSubjectAlternativeNamesComputedOptional() {
    this._subjectAlternativeNamesComputedOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get subjectAlternativeNamesComputedOptionalInput() {
    return this._subjectAlternativeNamesComputedOptional
  }

  // subject_alternative_names_optional - computed: false, optional: true, required: false
  private _subjectAlternativeNamesOptional?: { [key: string]: string };
  public get subjectAlternativeNamesOptional() {
    return this.interpolationForAttribute('subject_alternative_names_optional') as any;
  }
  public set subjectAlternativeNamesOptional(value: { [key: string]: string } ) {
    this._subjectAlternativeNamesOptional = value;
  }
  public resetSubjectAlternativeNamesOptional() {
    this._subjectAlternativeNamesOptional = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get subjectAlternativeNamesOptionalInput() {
    return this._subjectAlternativeNamesOptional
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      subject_alternative_names_computed_optional: hashMapper(anyToTerraform)(this._subjectAlternativeNamesComputedOptional),
      subject_alternative_names_optional: hashMapper(anyToTerraform)(this._subjectAlternativeNamesOptional),
    };
  }
}
"
`;
